# Graphics-Origin

./: .gitignore  CMakeLists.txt  GO.files  GO.includes  Makefile  README.md  SourceMe.sh
cmake/modules/: FindFreeImage.cmake  FindGLEW.cmake  FindGraphicsOrigin.cmake  FindLibNoise.cmake  FindOpenMesh.cmake
doc/: Doxyfile.in  mainpage.dox
extlibs/glm/gtc/: matrix_transform.hpp
graphics-origin/: graphics_origin.h
graphics-origin/application/: aaboxes_renderable.h  balls_renderable.h  camera.h  gl_helper.h  gl_texture_node.h  gl_window.h  gl_window_renderer.h  lines_renderable.h  mesh_renderable.h  meshes_renderable.h  points_renderable.h  renderable.h  renderer.h  shader_program.h  texture_debug_renderable.h  texture_node.h  textured_mesh_renderable.h  window.h
graphics-origin/application/qt_application/: gl_window.h  renderer.h  texture_node.h  window.h
graphics-origin/application/renderables/: aaboxes_renderable.h  balls_renderable.h  lines_renderable.h  mesh_renderable.h  meshes_renderable.h  points_renderable.h  texture_debug_renderable.h  textured_mesh_renderable.h
graphics-origin/geometry/: ball.h  box.h  bvh.h  matrix.h  mesh.h  ray.h  traits.h  triangle.h  vec.h
graphics-origin/geometry/concepts/: ball_intersecter.h  bounding_box_computer.h  box_container.h  box_intersecter.h  point_container.h
graphics-origin/geometry/detail/: bvh_customization_points.h  bvh_implementation.h  bvh_implementation.tcc
graphics-origin/tools/: any.h  assert.h  filesystem.h  fps_counter.h  hash.h  hash_tuple.h  log.h  memory.h  parallel.h  period_counter.h  random.h  resources.h  tight_buffer_manager.h
graphics-origin/tools/detail/: any.tcc
include/: graphics_origin.h  project.h
include/tools/: any.h  filesystem.h  hash_tuple.h  log.h
include/tools/detail/: any.tcc
lib/: graphics_origin.h.in
lib/application/: CMakeLists.txt  aaboxes_renderable.cc  application.pro  balls_renderable.cc  camera.cc  gl_helper.cc  gl_texture_node.cc  gl_window.cc  gl_window_renderer.cc  library.mk  lines_renderable.cc  mesh_renderable.cc  meshes_renderable.cc  points_renderable.cc  qt_renderer.cc  qt_renderer_gl_methods.cc  qt_texture_node.cc  qt_window.cc  renderable.cc  shader_program.cc  texture_debug_renderable.cc  textured_meshes_renderable.cc
lib/geometry/: CMakeLists.txt  ball.cc  box.cc  bvh.cc  library.mk  matrix.cc  mesh.cc  triangle.cc  vec.cc
lib/tools/: CMakeLists.txt  filesystem.cc  fps_counter.cc  library.mk  log.cc  memory.cc  parallel.cc  period_counter.cc  random.cc  resources.cc  tools.cc
qml/: SceneWindow.qml  Style.qml
scripts/: start.sh  stop.sh  switch.sh
shaders/: aabox.frag  aabox.geom  aabox.vert  balls.frag  balls.geom  balls.vert  flat.frag  flat.vert  mesh.frag  mesh.vert  texture_debug.frag  texture_debug.geom  textured_mesh.frag  textured_mesh.vert  transparent_window.geom  transparent_window.vert
test/: 0_design_test.cc  2_bvh_performances.cc  4_complex_planet_libnoise.cc  CMakeLists.txt  memory_design_test.cc  unit_tests.cc  windows_cuda_thrust_bug.cc  windows_cuda_thrust_cpp_sort.cc
test/2_bvh_performances/: bvh_check.h  bvh_new.h  bvh_new_implementation.h  bvh_printer.h
test/unit_tests/: application_main.cc  common.h  geometry_main.cc  tools_main.cc  tools_memory.cc  tools_memory_bounds_checking.cc  tools_memory_memory_area.cc  tools_memory_memory_arena.cc
tutorial/1_tools/: 1_log.cc  CMakeLists.txt  tutorial.mk
tutorial/2_geometry/: 2_bvh.cc  2_mesh.cc  CMakeLists.txt
tutorial/3_application/: 3_simple_gl_application.cc  3_simple_gl_application.h  3_simple_gl_application.pro  3_simple_gl_application.qml  3_test_application.cc  CMakeLists.txt  SceneWindow.qml  Style.qml  armadillo.off  bumpy_torus.balls  simple_camera.cc  simple_camera.h  simple_gl_renderer.h  simple_qml_application.cc  simple_qml_application.h  tutorial.mk
tutorial/3_application/meshes/: dinopet.off
tutorial/3_application/shaders/: aabox.vert  mesh.geom
tutorial/4_graphics/: 4_island_map.cc  4_island_map.qml  4_transparency.cc  CMakeLists.txt  island_map.cc  simple_gl_renderer.h  simple_qml_application.cc  simple_terrain_generation.cc  transparency.cc  transparency2.cc
tutorial/4_graphics/common/: simple_camera.cc  simple_camera.h  simple_gl_renderer.h  simple_qml_application.cc  simple_qml_application.h
tutorial/4_graphics/island_map/: 4_island_map.qml  island.cc  island.frag  island.h  island.tcs  island.tes  island.vert  island_map.h  island_map_builder.cc  island_map_builder.h
tutorial/4_graphics/simple_terrain_generation/: map.cc  map.h  simple_terrain.frag  simple_terrain.tcs  simple_terrain.tes
tutorial/4_graphics/transparency/: 4_transparency.qml  rotating_camera.cc  rotating_camera.h  transparent_window.vert  transparent_windows_renderable.cc  transparent_windows_renderable.h  window_frame.frag  window_frame.geom  window_frame.vert  window_frames_renderable.cc  window_frames_renderable.h
tutorial/4_graphics/transparency2/: 4_transparency2.qml  rotating_camera2.cc  rotating_camera2.h  simple_qml_application2.cc  simple_qml_application2.h  transparent_windows_renderable2.cc  transparent_windows_renderable2.h  window_frames_renderable2.cc  window_frames_renderable2.h
tutorial/graphics/: CMakeLists.txt  simple_qml_application.h  transparency.cc
